k8s/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      serviceAccountName: catalog-sa
      containers:
        - name: catalog-container
          image: 253490771520.dkr.ecr.ap-south-1.amazonaws.com/catalog-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
