k8s/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  type: NodePort
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
