k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-marketplace-ingress
spec:
  rules:
    - host: car.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: catalog-service
                port:
                  number: 3000
